# json2cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  json2cpp.py
schema/: example_schema.json  schema.json
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_example_classes.cpp  test_generated_classes.cpp
